# openapi.json
@@ -1379,11 +1379,16 @@
                         "exclusiveMinimum": 0
                       }
                     }
+                  },
+                  "upstream_token_id": {
+                    "type": "string",
+                    "minLength": 1
                   }
                 },
                 "required": [
                   "name",
-                  "policy"
+                  "policy",
+                  "upstream_token_id"
                 ]
               }
             }
@@ -2224,11 +2229,16 @@
                   },
                   "created_by": {
                     "type": "string"
+                  },
+                  "upstream_token_id": {
+                    "type": "string",
+                    "minLength": 1
                   }
                 },
                 "required": [
                   "name",
-                  "policy"
+                  "policy",
+                  "upstream_token_id"
                 ]
               }
             }
@@ -4542,6 +4552,16 @@
                 "type": "null"
               }
             ]
+          },
+          "upstream_token_id": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ]
           }
         },
         "required": [
@@ -4556,7 +4576,8 @@
           "bulk_rate",
           "bulk_bucket",
           "single_rate",
-          "single_bucket"
+          "single_bucket",
+          "upstream_token_id"
         ],
         "additionalProperties": false,
         "description": "A purge API key"
@@ -4841,6 +4862,16 @@
                 "type": "null"
               }
             ]
+          },
+          "upstream_token_id": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ]
           }
         },
         "required": [
@@ -4851,7 +4882,8 @@
           "expires_at",
           "revoked",
           "policy",
-          "created_by"
+          "created_by",
+          "upstream_token_id"
         ],
         "additionalProperties": false,
         "description": "An S3-compatible credential"
